# Gish

./: .gitignore  ReadMe.md  settings.gradle
assets_full/: ReadMe-GishData.md
docs/: GNOME_Adwaita_Icons.txt  Licenses_of_files.txt
docs/GL4ES/: Version.txt
docs/OpenAL/: Version.txt
docs/SDL2/: Version.txt
docs/Vorbis/: Version.txt
gish/: build.gradle
gish/src/main/: AndroidManifest.xml
gish/src/main/cpp/: CMakeLists.txt
gish/src/main/cpp/GL4ES/: Android.mk
gish/src/main/cpp/Gish/: Android.mk  config.h  main.c
gish/src/main/cpp/Gish/android/: a_utils.c  a_utils.h
gish/src/main/cpp/Gish/audio/: audio.c  audio.h
gish/src/main/cpp/Gish/egl/: eglport.c  eglport.h
gish/src/main/cpp/Gish/game/: config.c  config.h  credits.c  custom.c  editor.c  english.h  game.c  game.h  gamemenu.c  gametexture.c  high.c  level.c  lighting.c  lighting.h  logic.c  mainmenu.c  mappack.c  music.h  objedit.c  options.c  player.c  record.c  render.c  replay.c  ropeedit.c  socket.c  vsmode.c
gish/src/main/cpp/Gish/input/: keyboard.c  keyboard.h
gish/src/main/cpp/Gish/menu/: menu.c
gish/src/main/cpp/Gish/sdl/: event.c  sdl.h  video.c  video.h
gish/src/main/cpp/Gish/video/: glfunc.c  opengl.c  opengl.h  text.c  texture.c
gish/src/main/cpp/OpenAL/: Android.mk  config.h
gish/src/main/cpp/OpenAL/Alc/: ALc.c  helpers.c
gish/src/main/cpp/OpenAL/Alc/backends/: opensl.c
gish/src/main/cpp/OpenAL/OpenAL32/Include/: alMain.h
gish/src/main/cpp/SDL2/: Android.mk
gish/src/main/cpp/SDL2/include/: SDL_config_android.h
gish/src/main/cpp/SDL2/src/: SDL.c
gish/src/main/cpp/SDL2/src/dynapi/: SDL_dynapi_procs.h
gish/src/main/cpp/cmake/: FindOpenGLES.cmake
gish/src/main/cpp/libvorbis/: Android.mk
gish/src/main/java/org/libsdl/app/: SDLActivity.java
gish/src/main/java/ru/exlmoto/gish/: GishActivity.java  GishFilePickerActivity.java  GishLauncherActivity.java  GishTouchControlsView.java  GishTouchOverlayView.java
gish/src/main/res/layout/: gish_dialog_about.xml  gish_filepicker.xml  gish_filepicker_row.xml  gish_launcher.xml
gish/src/main/res/values/: dimens.xml  strings.xml  style.xml
gish/src/main/res/values-ru/: strings.xml
gish/src/main/res/values-v11/: style.xml
gish/src/main/res/values-v14/: style.xml
gish/src/main/res/values-v21/: style.xml
gish/src/test/: 0x80.c  txt.c
gradle/wrapper/: gradle-wrapper.properties
images/src/: buttons.xcf  folder_gish.xcf  overlay_controls.xcf
